--- a/app/src/main/res/layout/view_bar_menu.xml
+++ b/app/src/main/res/layout/view_bar_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/lib/com.merlin.view.bar">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -66,7 +65,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_notice_number"
             android:gravity="center"
-            android:visibility="@{model.isNotice &amp;&amp; ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{model.isNotice() &amp;&amp; ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
 
         <TextView
             android:layout_width="14dp"
@@ -78,7 +77,7 @@
             android:text="@{model.notice}"
             android:textColor="@color/light"
             android:textSize="6sp"
-            android:visibility="@{model.isNotice &amp;&amp; !ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{model.isNotice() &amp;&amp; !ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
     </LinearLayout>
 
 </layout>
