--- a/app/src/main/res/layout/view_bar_menu.xml
+++ b/app/src/main/res/layout/view_bar_menu.xml
@@ -13,7 +13,7 @@
     </data>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
         android:minHeight="32dp"
