--- a/app/src/main/res/layout/view_bar_menu.xml
+++ b/app/src/main/res/layout/view_bar_menu.xml
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="?android:attr/selectableItemBackground"
         android:minHeight="32dp"
         android:onClick="@{(view) -> model.listener.onClickMenu(model)}"
