--- a/src/main/res/layout/view_bar_menu.xml
+++ b/src/main/res/layout/view_bar_menu.xml
@@ -5,7 +5,7 @@
 
         <import type="android.view.View" />
 
-        <import type="com.merlin.core.util.ValiUtil" />
+        <import type="com.merlin.core.util.MVerify" />
 
         <variable
             name="model"
@@ -45,7 +45,7 @@
                 android:text="@{model.text}"
                 android:textColor="@{model.textColor}"
                 android:textSize="@{model.textSize}"
-                android:visibility="@{ValiUtil.isBlank(model.text) ? View.GONE : View.VISIBLE}" />
+                android:visibility="@{MVerify.isBlank(model.text) ? View.GONE : View.VISIBLE}" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
                 android:text="@{model.desc}"
                 android:textColor="@{model.descColor}"
                 android:textSize="@{model.descSize}"
-                android:visibility="@{ValiUtil.isBlank(model.desc) ? View.GONE : View.VISIBLE}" />
+                android:visibility="@{MVerify.isBlank(model.desc) ? View.GONE : View.VISIBLE}" />
         </LinearLayout>
 
         <ImageView
@@ -65,7 +65,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_notice_number"
             android:gravity="center"
-            android:visibility="@{model.isNotice() &amp;&amp; ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{model.isNotice() &amp;&amp; MVerify.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
 
         <TextView
             android:layout_width="14dp"
@@ -76,7 +76,7 @@
             android:gravity="center"
             android:text="@{model.notice}"
             android:textSize="6sp"
-            android:visibility="@{model.isNotice() &amp;&amp; !ValiUtil.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
+            android:visibility="@{model.isNotice() &amp;&amp; !MVerify.isBlank(model.notice) ? View.VISIBLE : View.GONE}" />
     </LinearLayout>
 
 </layout>
