--- a/src/main/res/drawable/bg_notice_number.xml
+++ b/src/main/res/drawable/bg_notice_number.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="oval"
+    android:useLevel="false">
 
     <solid android:color="@android:color/holo_red_light" />
 
-    <padding android:left="2dp"
-        android:bottom="2dp"
-        android:right="2dp"
-        android:top="2dp" />
+    <!--<padding-->
+        <!--android:bottom="1dp"-->
+        <!--android:left="1dp"-->
+        <!--android:right="1dp"-->
+        <!--android:top="1dp" />-->
+
+    <!-- 圆角 -->
+    <corners android:radius="360dp" />
+
+    <size
+        android:width="1dp"
+        android:height="1dp" />
 
 </shape>
