--- a/src/main/res/layout/view_bar.xml
+++ b/src/main/res/layout/view_bar.xml
@@ -5,14 +5,31 @@
     <data>
 
         <variable
-            name="model"
-            type="com.merlin.view.bar.model.Bar" />
+            name="bgColor"
+            type="Integer" />
+
+        <variable
+            name="left"
+            type="com.merlin.view.bar.model.Menu" />
+
+        <variable
+            name="middle"
+            type="com.merlin.view.bar.model.Menu" />
+
+        <variable
+            name="right1"
+            type="com.merlin.view.bar.model.Menu" />
+
+        <variable
+            name="right2"
+            type="com.merlin.view.bar.model.Menu" />
     </data>
 
-    <com.merlin.view.bar.MBarView
+    <RelativeLayout
         android:id="@+id/mBarView"
-        style="@style/topBar"
-        android:background="@{model.bgColorBar}">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@{bgColor}">
 
         <include
             android:id="@+id/view_bar_left"
@@ -20,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            bind:model="@{model.left}" />
+            bind:model="@{left}" />
 
         <include
             android:id="@+id/view_bar_middle"
@@ -28,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            bind:model="@{model.middle}" />
+            bind:model="@{middle}" />
 
         <include
             android:id="@+id/view_bar_right1"
@@ -37,7 +54,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            bind:model="@{model.right1}" />
+            bind:model="@{right1}" />
 
         <include
             android:id="@+id/view_bar_right2"
@@ -46,7 +63,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/view_bar_right1"
-            bind:model="@{model.right2}" />
-    </com.merlin.view.bar.MBarView>
+            bind:model="@{right2}" />
+    </RelativeLayout>
 
 </layout>
